--- a/frontend/cloudapp-shell/src/styles/globals.css
+++ b/frontend/cloudapp-shell/src/styles/globals.css
@@ -78,7 +78,6 @@
   height: auto;
   margin: 10px;
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 5px;
 }
 
@@ -158,9 +157,11 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
   background-color: white;
   position: fixed;
   top: 100px;
+  bottom: 100px;
   border: 4px solid;
   border-radius: 6px;
   min-height: 200px;
+  overflow: auto
 }
 
 .inline-block {
