--- a/frontend/remote/petstore/pages/styles.css
+++ b/frontend/remote/petstore/pages/styles.css
@@ -2,6 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+    --primary: 221.2 83.2% 53.3%;
+    --primary-foreground: 210 40% 98%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 221.2 83.2% 53.3%;
+    --radius: 0.3rem;
+    --dialog-bg: #ffffff;
+    --dialog-text: #000000;
+  }
+
+  .dark {
+    --background: 222.2 100% 0%;
+    --foreground: 210 40% 98%;
+    --primary-color: 0 0% 100%;
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+    --primary: 217.2 91.2% 59.8%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 224.3 76.3% 48%;
+    --dialog-bg: #121212;
+    --dialog-text: #ffffff;
+  }
+
+  body {
+    font-family: "Inter", sans-serif;
+    background-color: hsl(var(--background));
+  }
+}
+
+.MuiPaper-root.MuiDialog-paper {
+  background-color: var(--dialog-bg);
+  color: var(--dialog-text);
+}
 
 .centered {
   margin-left: auto;
@@ -29,8 +90,21 @@
   border-radius: 5px;
 }
 
+.section2 {
+  flex: 1 1 100%;
+  max-width: 300px;
+  height: auto;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
 
 .section h1 {
+  margin-top: 0;
+}
+
+.section2 h1 {
   margin-top: 0;
 }
 
@@ -99,3 +173,14 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
   cursor: pointer;
   border-radius: 5px;
 }
+
+.popup-box {
+  position: fixed;
+  top: 100px;
+  bottom: 100px;
+  border: 4px solid;
+  border-radius: 6px;
+  min-height: 200px;
+  overflow: auto
+}
+
