--- a/frontend/cloudapp-shell/src/styles/globals.css
+++ b/frontend/cloudapp-shell/src/styles/globals.css
@@ -64,6 +64,14 @@
   color: var(--dialog-text);
 }
 
+.dialog {
+  background-color: var(--dialog-bg);
+  color: var(--dialog-text);
+  &::placeholder{
+    opacity: 1 !important;
+  }
+}
+
 .centered {
  margin-left: auto;
  margin-right: auto;
@@ -88,6 +96,7 @@
   margin: 10px;
   padding: 20px;
   border-radius: 5px;
+  display: inline-block;
 }
 
 
