--- a/frontend/remote/chatllm/pages/styles.css
+++ b/frontend/remote/chatllm/pages/styles.css
@@ -100,11 +100,25 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
   border-radius: 5px;
 }
 
+.chatButton {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  justify-content: space-between;
+  margin-top: 17px;
+}
+
 .Chat {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   height: 90vh;
+  width: 800px;
 }
 
 .messages-list {
@@ -125,11 +139,20 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
 
 .message-input {
   display: flex;
-  width: 800px;
+  width: 500px;
   justify-content: space-between;
-  max-width: 900px;
+  max-width: 500px;
   margin: 0 auto 60px;
   margin-bottom: 38px;
+}
+
+.inputField {
+  flex: auto;
+  background-color: white;
+  padding: 0px;
+  font-size: 2px;
+  border-radius: 0px;
+  flex-grow: 1;
 }
 
 .inputFieldContainer {
@@ -137,13 +160,13 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
 }
 
 .inputFieldFormat {
-  @apply italic text-gray-500 bg-green-300 p-2 rounded-md mb-2
+  @apply italic text-black bg-green-300 p-2 rounded-md mb-2
 }
 
 .outputFieldFormat {
-  @apply italic text-gray-500 bg-gray-300 p-2 rounded-md mb-2
+  @apply italic text-black bg-gray-300 p-2 rounded-md mb-2
 }
 
 .outputFieldThinkingFormat {
-  @apply italic text-gray-500 bg-blue-300 p-2 rounded-md mb-2
+  @apply italic text-black bg-blue-300 p-2 rounded-md mb-2
 }
