--- a/frontend/remote/chatllm/pages/styles.css
+++ b/frontend/remote/chatllm/pages/styles.css
@@ -143,7 +143,7 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
   width: 600px;
   justify-content: space-between;
   max-width: 500px;
-  margin: 0 auto 60px;
+  margin: 100px;
   margin-bottom: 38px;
 }
 
